[package]
name = "webhookspammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
dialoguer = "0.10.3"
json = "0.12.4"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde_json = "1.0.95"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
